refresh fixes and tests for @Grab